@@ -1,19 +1,0 @@
-<HTML>
-<head>
-<script language=javascript>
-	window.resizeTo(1024,768);
-</script>
-</head>
-
-<frameset cols="40%,*" border='1' framespacing='0'>
-  <frameset rows='60,*' border='0' framespacing='0'>
-  	<frame src='title.jsp' marginheight='0' marginwidth='0'scrolling=no>
-	<frame src='allteams.jsp' scrolling=no>
-  </frameset>
-  <frameset rows='350,*' border='1' framespacing='0'>
-      <frame src='top10.jsp?vDivision=1' marginheight='0' marginwidth='0' noresize scrolling=no >
-      <frame src='last8.jsp' marginheight='3' marginwidth='0' noresize scrolling=no >
-  </frameset>
-</frameset>
-
-</HTML>
