@@ -13,8 +13,8 @@
 
 <frameset cols="40%,*" border='1' framespacing='0'>
   <frameset rows='60,*' border='0' framespacing='0'>
-  	<frame src='<c:url value="title.jsp" />' marginheight='0' marginwidth='0'scrolling=no>
-	<frame src='<c:url value="allteams.jsp"><c:param name="scroll" value="true"/></c:url>' scrolling=no>
+  	<frame src='<c:url value="/scoreboard/title.jsp" />' marginheight='0' marginwidth='0'scrolling=no>
+	<frame src='<c:url value="/scoreboard/allteams.jsp"><c:param name="scroll" value="true"/></c:url>' scrolling=no>
   </frameset>
   <frameset rows='350,*' border='1' framespacing='0'>
       <frame src='<c:url value="top10.jsp"><c:param name="vDivision" value="1" /></c:url>' marginheight='0' marginwidth='0' noresize scrolling=no >
